# ascii-dungeon

./: .gitignore  CMakeLists.txt  README.md
assets/: gameover.txt
assets/battle_sprites/: bat.txt  cat.txt  gunter.txt  orgalorg.txt
src/: battle.c  battle.h  color.c  color.h  console.c  console.h  database.c  database.h  defines.h  display.c  display.h  enums.h  game.c  game.h  main.c  overworld.c  overworld.h  scene.c  scene.h  sprite.c  sprite.h  utils.c  utils.h
src/gamestates/: battle.c  battle.h  gameover.c  gameover.h  overworld.c  overworld.h
